Fix rendering issue with gradient not covering the background image correctly

--- a/web/css/_theme.scss
+++ b/web/css/_theme.scss
@@ -1488,12 +1488,13 @@ select[data-filter-bind] {
 		top: 0;
 		right: 0;
 		height: 100vh;
+		max-height: 54em;
 		z-index: -1;
 		overflow: hidden;
 		background-image: linear-gradient(to bottom right, rgba(255, 255, 255, .7), rgba(255, 255, 255, 1) 45%), var(--seo-bgimage);
 		background-position: top;
 		background-size: 100% 100%, 100% auto;
-		background-repeat: no-repeat;	
+		background-repeat: no-repeat;
 	}
 }
 
